[package]
name = "macos-iohid"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
#protoc-rust = "2"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
swift-bridge-build = "0.1"
prost-build = "0.10.4"

[dependencies]
swift-bridge = "0.1"
prost = "0.10.4"
prost-types = "0.10"
bytes = "1.2.0"
winapi ={ version="0.3.9", features=["minwindef","winuser","processthreadsapi"]}